test/Dialect/LLZK/unifiable_cast_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {veridise.lang = "llzk"} {
  struct.def @Tester<[@S0, @S1]> {
    function.def @compute(%0: index) -> !struct.struct<@Tester<[@S0, @S1]>> {
      %self = struct.new : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'poly.unifiable_cast' op input type 'index' and output type '!felt.felt' are not unifiable}}
      %r0 = poly.unifiable_cast %0 : (index) -> !felt.felt
      function.return %self : !struct.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !struct.struct<@Tester<[@S0, @S1]>>, %0: index) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  struct.def @Tester<[@S0, @S1]> {
    function.def @compute(%1: i1) -> !struct.struct<@Tester<[@S0, @S1]>> {
      %self = struct.new : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'poly.unifiable_cast' op input type 'i1' and output type 'index' are not unifiable}}
      %r1 = poly.unifiable_cast %1 : (i1) -> index
     function.return %self : !struct.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !struct.struct<@Tester<[@S0, @S1]>>, %1: i1) {
      function.return
    }
  }
}


// -----

module attributes {veridise.lang = "llzk"} {
  struct.def @Tester<[@S0, @S1]> {
    function.def @compute(%2: !felt.felt) -> !struct.struct<@Tester<[@S0, @S1]>> {
      %self = struct.new : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'poly.unifiable_cast' op input type '!felt.felt' and output type '!string.string' are not unifiable}}
      %r2 = poly.unifiable_cast %2 : (!felt.felt) -> !string.string
      function.return %self : !struct.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !struct.struct<@Tester<[@S0, @S1]>>, %2: !felt.felt) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  struct.def @T1<[]> {
    function.def @compute() -> !struct.struct<@T1<[]>> {
      %self = struct.new : <@T1<[]>>
      function.return %self : !struct.struct<@T1<[]>>
    }
    function.def @constrain(%self : !struct.struct<@T1<[]>>) {
      function.return
    }
  }
  struct.def @T2<[@N]> {
    function.def @compute() -> !struct.struct<@T2<[@N]>> {
      %self = struct.new : <@T2<[@N]>>
      function.return %self : !struct.struct<@T2<[@N]>>
    }
    function.def @constrain(%self : !struct.struct<@T2<[@N]>>) {
      function.return
    }
  }
  struct.def @Tester<[@S0, @S1]> {
    function.def @compute(%3: !struct.struct<@T1<[]>>) -> !struct.struct<@Tester<[@S0, @S1]>> {
      %self = struct.new : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'poly.unifiable_cast' op input type '!struct.struct<@T1<[]>>' and output type '!struct.struct<@T2<[@S0]>>' are not unifiable}}
      %r3 = poly.unifiable_cast %3 : (!struct.struct<@T1<[]>>) -> !struct.struct<@T2<[@S0]>>
      function.return %self : !struct.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !struct.struct<@Tester<[@S0, @S1]>>, %3: !struct.struct<@T1<[]>>) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  struct.def @T2<[@N]> {
    function.def @compute() -> !struct.struct<@T2<[@N]>> {
      %self = struct.new : <@T2<[@N]>>
      function.return %self : !struct.struct<@T2<[@N]>>
    }
    function.def @constrain(%self : !struct.struct<@T2<[@N]>>) {
      function.return
    }
  }
  struct.def @Tester<[@S0, @S1]> {
    function.def @compute(%4: !struct.struct<@T2<[1]>>) -> !struct.struct<@Tester<[@S0, @S1]>> {
      %self = struct.new : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'poly.unifiable_cast' op input type '!struct.struct<@T2<[1]>>' and output type '!struct.struct<@T2<[!felt.felt]>>' are not unifiable}}
      %r4 = poly.unifiable_cast %4 : (!struct.struct<@T2<[1]>>) -> !struct.struct<@T2<[!felt.felt]>>
      function.return %self : !struct.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !struct.struct<@Tester<[@S0, @S1]>>, %4: !struct.struct<@T2<[1]>>) {
      function.return
    }
  }
}


// -----

#map1 = affine_map<()[s0, s1] -> (s0 + s1)>
module attributes {veridise.lang = "llzk"} {
  struct.def @T2<[@N]> {
    function.def @compute() -> !struct.struct<@T2<[@N]>> {
      %self = struct.new : <@T2<[@N]>>
      function.return %self : !struct.struct<@T2<[@N]>>
    }
    function.def @constrain(%self : !struct.struct<@T2<[@N]>>) {
      function.return
    }
  }
  struct.def @Tester<[@S0, @S1]> {
    function.def @compute(%6: !struct.struct<@T2<[index]>>) -> !struct.struct<@Tester<[@S0, @S1]>> {
      %self = struct.new : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'poly.unifiable_cast' op input type '!struct.struct<@T2<[index]>>' and output type '!struct.struct<@T2<[affine_map<()[s0, s1] -> (s0 + s1)>]>>' are not unifiable}}
      %r6 = poly.unifiable_cast %6 : (!struct.struct<@T2<[index]>>) -> !struct.struct<@T2<[#map1]>>
      function.return %self : !struct.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !struct.struct<@Tester<[@S0, @S1]>>, %6: !struct.struct<@T2<[index]>>) {
      function.return
    }
  }
}

// -----

#map1 = affine_map<()[s0, s1] -> (s0 + s1)>
module attributes {veridise.lang = "llzk"} {
  struct.def @T2<[@N]> {
    function.def @compute() -> !struct.struct<@T2<[@N]>> {
      %self = struct.new : <@T2<[@N]>>
      function.return %self : !struct.struct<@T2<[@N]>>
    }
    function.def @constrain(%self : !struct.struct<@T2<[@N]>>) {
      function.return
    }
  }
  struct.def @Tester<[@S0, @S1]> {
    function.def @compute(%7: !struct.struct<@T2<[!felt.felt]>>) -> !struct.struct<@Tester<[@S0, @S1]>> {
      %self = struct.new : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'poly.unifiable_cast' op input type '!struct.struct<@T2<[!felt.felt]>>' and output type '!struct.struct<@T2<[1234]>>' are not unifiable}}
      %r7 = poly.unifiable_cast %7 : (!struct.struct<@T2<[!felt.felt]>>) -> !struct.struct<@T2<[1234]>>
      function.return %self : !struct.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !struct.struct<@Tester<[@S0, @S1]>>) {
      function.return
    }
  }
}

// -----

#map1 = affine_map<()[s0, s1] -> (s0 + s1)>
module attributes {veridise.lang = "llzk"} {
  struct.def @T2<[@N]> {
    function.def @compute() -> !struct.struct<@T2<[@N]>> {
      %self = struct.new : <@T2<[@N]>>
      function.return %self : !struct.struct<@T2<[@N]>>
    }
    function.def @constrain(%self : !struct.struct<@T2<[@N]>>) {
      function.return
    }
  }
  struct.def @T3<[@A, @B, @C, @D, @E]> {
    function.def @compute() -> !struct.struct<@T3<[@A, @B, @C, @D, @E]>> {
      %self = struct.new : <@T3<[@A, @B, @C, @D, @E]>>
      function.return %self : !struct.struct<@T3<[@A, @B, @C, @D, @E]>>
    }
    function.def @constrain(%self : !struct.struct<@T3<[@A, @B, @C, @D, @E]>>) {
      function.return
    }
  }
  struct.def @Tester<[@S0, @S1]> {
    function.def @compute(%18: !struct.struct<@T3<[1, 1, @S0, 1, !struct.struct<@T2<[1]>>]>>) -> !struct.struct<@Tester<[@S0, @S1]>> {
      %self = struct.new : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'poly.unifiable_cast' op input type '!struct.struct<@T3<[1, 1, @S0, 1, !struct.struct<@T2<[1]>>]>>' and output type '!struct.struct<@T3<[!string.string, affine_map<()[s0, s1] -> (s0 + s1)>, 1, @S0, !struct.struct<@T2<[affine_map<()[s0, s1] -> (s0 + s1)>]>>]>>' are not unifiable}}
      %19 = poly.unifiable_cast %18 : (!struct.struct<@T3<[1, 1, @S0, 1, !struct.struct<@T2<[1]>>]>>) -> !struct.struct<@T3<[!string.string, #map1, 1, @S0, !struct.struct<@T2<[#map1]>>]>>
      function.return %self : !struct.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !struct.struct<@Tester<[@S0, @S1]>>, %18: !struct.struct<@T3<[1, 1, @S0, 1, !struct.struct<@T2<[1]>>]>>) {
      function.return
    }
  }
}
